tests/paczka1/small_fuzzy/49120303.err
Error in line 2: A393 S450 47,38
Error in line 4: yXmW A6U9 14,5
Error in line 1: hkW00dLxG2 A609 22,9
Error in line 8: yXmW A764 94,5
Error in line 10: A393 A393 138,4
